unpackaged/main/default/objects/Room__c/fields/Room_Booked__c.field-meta.xml
<CustomField>
    <fullName>Room_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Room Booked</label>
    <type>Checkbox</type>
</CustomField>