unpackaged/main/default/objects/Room__c/fields/Room_ID__c.field-meta.xml
<CustomField>
    <fullName>Room_ID__c</fullName>
    <displayFormat>RO-{0000}</displayFormat>
    <label>Room ID</label>
    <type>AutoNumber</type>
</CustomField>