unpackaged/main/default/objects/Room__c/fields/Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Name__c</fullName>
    <label>Room Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOUBLE</fullName>
            </value>
            <value>
                <fullName>KING</fullName>
            </value>
            <value>
                <fullName>QUEEN</fullName>
            </value>
            <value>
                <fullName>SINGLE</fullName>
            </value>
            <value>
                <fullName>STUDIO</fullName>
            </value>
            <value>
                <fullName>SUITE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>