unpackaged/main/default/objects/Room__c/fields/Room_Price__c.field-meta.xml
<CustomField>
    <fullName>Room_Price__c</fullName>
    <label>Room Price</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>