unpackaged/main/default/objects/Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Room_ID__c</columns>
    <columns>Hotel__c</columns>
    <columns>NAME</columns>
    <columns>Room_Name__c</columns>
    <columns>Room_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>